--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h3 {
     height: 750px;
     margin: auto;
     overflow: hidden;
-    background-image: url("https://github.com/FMROSTOV/rnd.avtoradio/blob/01dd2f06cec60f6a5af131f95bae051f56ef4cf6/Fonavtoradio.jpg");
+    background-image: url("https://raw.githubusercontent.com/FMROSTOV/rnd.avtoradio/main/rnd.avto.jpg");
     background-repeat: repeat;
     background-size: cover;
 }
