--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h3 {
     height: 750px;
     margin: auto;
     overflow: hidden;
-    background-image: url("https://raw.githubusercontent.com/FMROSTOV/rnd.avtoradio/main/rnd.avto.jpg");
+    background-image: url("https://raw.githubusercontent.com/FMROSTOV/FMRostov.github.io/main/yellow-background-1440627692qIZ.jpg");
     background-repeat: repeat;
     background-size: cover;
 }
